cabal-version: 2.2
name: merkle-log
version: 0.1.0.0
synopsis: Merkle Tree Logs
description: A implementation of Merkle Trees from RFC 6962
homepage: https://github.com/kadena-io/merkle-log
bug-reports: https://github.com/kadena-io/merkle-log/issues
license: BSD-3-Clause
license-file: LICENSE
author: Lars Kuhtz
maintainer: Lars Kuhtz <lars@kadena.io>
copyright: Copyright (c) 2019, Kadena LLC
category: Data
extra-source-files:
    README.md
    CHANGELOG.md

library
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options:
        -Wall
    exposed-modules:
        Data.MerkleLog
    build-depends:
          base >=4.12
        , bytestring >=0.10
        , cryptonite >=0.25
        , deepseq >=1.4
        , memory >=0.14

test-suite test
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    ghc-options:
        -Wall
        -threaded
        -with-rtsopts=-N
    default-language: Haskell2010
    main-is: Main.hs
    build-depends:
        -- internal
          merkle-log

        -- external
        , QuickCheck >=2.12
        , base >=4.11
        , bytestring >=0.10
        , cryptonite >=0.25
        , deepseq >=1.4
        , memory >=0.14

benchmark benchmarks
    type: exitcode-stdio-1.0
    hs-source-dirs: bench
    ghc-options:
        -Wall
        -threaded
        -with-rtsopts=-N
    default-language: Haskell2010
    main-is: Main.hs
    build-depends:
        -- internal
          merkle-log

        -- external
        , QuickCheck >=2.12
        , base >=4.11
        , bytestring >=0.10
        , cereal >=0.5
        , criterion >=1.5
        , cryptonite >=0.25
        , deepseq >=1.4
        , hash-tree >=0.0
        , memory >=0.14
        , merkle-tree >=0.1
        , mwc-random >=0.14
        , random >=1.1
        , random-bytestring >=0.1

